fix for too long of content in search suggestions

--- a/Styles/pages/_search.less
+++ b/Styles/pages/_search.less
@@ -225,6 +225,7 @@
 
             p {
                 color: @text-color;
+                margin-bottom: 0;
             }
         }
     }
